syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Demo";
option objc_class_prefix = "HLW";

package com.example;

// The service definition
service DemoService {
  rpc sayHello (HelloRequest) returns (HelloReply) {}
  rpc sayHelloAgain (HelloRequest) returns (HelloReply) {}
  // is there a convention to use capital or small case ?
  rpc saveUser (SaveUserRequest) returns (UserResponse) {}
  rpc saveUserStream (stream SaveUserRequest) returns (stream UserResponse) {}
}

// The request message containing the user's name.
message SaveUserRequest {
  string name = 1;
  string lastName = 2;
  string document = 3;
}
// The response message containing the greetings
message UserResponse {
  int32 id = 1;
  string name = 2;
  string lastName = 3;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}